<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MealActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dark_gradient"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-25dp"
        tools:layout_editor_absoluteY="-61dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="37dp"
                android:layout_height="141dp"
                android:layout_gravity="center"
                android:id="@+id/go_back"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_back_arrow"
                android:fontFamily="sans-serif-black"
                android:onClick="goBackAPage"
                android:paddingLeft="16dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:paddingRight="40dp"
                android:text="Create New Meal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="694dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="584dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="117dp"
                    android:layout_height="113dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/mealpic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Name of Meal"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/meal_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="10"
                        android:inputType="text"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Name of food"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/food_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="10"
                        android:inputType="text"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Calories of Food"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/food_calories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="10"
                        android:inputType="text"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/save_button"
                        android:layout_width="102dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="150dp"
                        android:layout_marginTop="100dp"
                        android:layout_marginEnd="0dp"
                        android:backgroundTint="#0091EA"
                        android:onClick="createMeal"
                        android:text="@string/save"
                        android:textColor="#212121"
                        app:cornerRadius="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="parent" />



                </LinearLayout>



            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>