...
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/gympic"
        app:layout_constraintBottom_toTopOf="@+id/textViewName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/activity_home" />


    <Button
        android:id="@+id/activity_home"
        android:layout_width="103dp"
        android:layout_height="0dp"
...
